tests/neg-custom-args/captures/i24373b.check
-- Error: tests/neg-custom-args/captures/i24373b.scala:3:18 ------------------------------------------------------------
3 |trait Bar extends Foo, caps.Stateful // error
  |                  ^^^
  |                  illegal inheritance: trait Bar which extends `Stateful` is not allowed to also extend trait Foo
  |                  since trait Foo is an exclusive capability but does not extend `Stateful`.
